squash! ARM: configs: add exynos4_defconfig (v2)
v3: CONFIG_IIO_ST_GYRO_3AXIS=m
Signed-off-by: Raymond Hackley <raymondhackley@protonmail.com>

--- a/arch/arm/configs/exynos4_defconfig
+++ b/arch/arm/configs/exynos4_defconfig
@@ -411,6 +411,7 @@ CONFIG_EXTCON_MAX8997=y
 CONFIG_EXYNOS5422_DMC=y
 CONFIG_IIO=m
 CONFIG_IIO_ST_ACCEL_3AXIS=m
+CONFIG_IIO_ST_GYRO_3AXIS=m
 CONFIG_EXYNOS_ADC=m
 CONFIG_CM3323=m
 CONFIG_CM36651=m
